src/styles/global.scss
@use "@styles/_theme.module.scss" as Theme;

// Globals{
@include Theme.setTextValues() {
  color: Theme.$black;
}

html * {
  box-sizing: border-box; // who knows. It might be a good practice.
}

main {
  min-height: 100vh;
  width: 100vw;
  display: flex;
  flex-direction: column;
}

// Oreo focus for better accessibility
:focus-visible {
  position: relative;
  outline: 9px double Theme.$secondaryGreen !important;
  box-shadow: 0 0 0 6px Theme.$lightSecondaryGreen !important;
  border: none !important;
  z-index: 999 !important; // Focus should be on top of everything.
}

html {
  width: fit-content;
  height: fit-content;
}

p {
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  margin-bottom: 1em;
}

h1 {
  text-align: center;
  font-size: Theme.$h1;
  font-weight: 700;
  @include Theme.mediaQuery(Theme.$tabletViewport) {
    font-size: calc(Theme.$h1 - 10px);
  }
  @include Theme.mediaQuery(Theme.$LgPhoneViewport) {
    font-size: calc(Theme.$h1 - 10px);
  }
  @include Theme.mediaQuery(Theme.$SmPhoneViewport) {
    font-size: calc(Theme.$h1 - 20px);
  }
}
h2 {
  text-align: center;
  font-size: Theme.$h2;
  font-weight: 700;
}
h3 {
  text-align: center;
  font-size: Theme.$h3;
  font-weight: 700;
}
h4 {
  text-align: left;
  font-size: Theme.$h4;
  font-weight: 700;
}
h1.title {
  font-size: 40px;
}

table {
  width: 100%;
  border-collapse: collapse;
  margin-left: none;

  th {
    font-weight: 700;
  }
  tr {
    border-bottom: 3px solid Theme.$secondaryGreen;
  }
}

hr {
  width: 100%;
  height: 6px;
  border-radius: 3px;
  border: none;
  background-color: Theme.$secondaryGreen;
}

b {
  font-weight: 700 !important;
  margin: 0 !important;
}

a {
  border-radius: Theme.$buttonRadius;
  text-decoration: none;
  &:hover {
    text-decoration: underline;
  }
  &:visited {
    color: inherit;
  }
}

@include Theme.setTextValues() {
  word-break: break-word;
}

footer {
  background-color: Theme.$secondaryGreen;
  p {
    color: Theme.$lightSecondaryGreen;
    text-align: center;
  }
}

// }
// vim: foldmethod=marker foldmarker={,}

